[gd_scene format=3 uid="uid://dsxmmndtd4r2c"]

[ext_resource type="Theme" uid="uid://u5qnpgxqykiv" path="res://UI/Themes/dark/theme.tres" id="1"]
[ext_resource type="Script" uid="uid://c8v72t8mvpgsq" path="res://UI/ColorPalettePicker.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ythmaa28xhfu" path="res://Assets/Icons/edit.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bk3y7p3lw12c6" path="res://Assets/Icons/plus.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dr2seirfl5vs0" path="res://Assets/Icons/copy.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dj1wtfng0xcmw" path="res://Assets/Icons/delete.png" id="6"]
[ext_resource type="Script" uid="uid://d2myv6ss15j1b" path="res://UI/Components/FlatTextureButton.gd" id="7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eth5b"]
bg_color = Color(0.12549, 0.129412, 0.141176, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.207843, 0.211765, 0.227451, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxLine" id="1"]
color = Color(0.4, 0.407843, 0.443137, 1)
grow_begin = -4.0
grow_end = -4.0
vertical = true

[sub_resource type="StyleBoxEmpty" id="2"]

[node name="ColorPalettePicker" type="PanelContainer" unique_id=994679553 node_paths=PackedStringArray("_palette_selection_button", "_color_grid")]
custom_minimum_size = Vector2(358, 78)
offset_right = 358.0
offset_bottom = 78.0
theme = ExtResource("1")
theme_override_styles/panel = SubResource("StyleBoxFlat_eth5b")
script = ExtResource("2")
_palette_selection_button = NodePath("MarginContainer/VBoxContainer/Buttons/PaletteSelectionButton")
_color_grid = NodePath("MarginContainer/VBoxContainer/ColorGrid")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=235135513]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=818252631]
layout_mode = 2
theme = ExtResource("1")

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=343431273]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PaletteSelectionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Buttons" unique_id=1093083986]
layout_mode = 2

[node name="AddPaletteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons" unique_id=2000058423]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "COLOR_PALETTE_PICKER_HINT_NEW"
texture_normal = ExtResource("4")
script = ExtResource("7")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="EditColorButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons" unique_id=328716865]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "COLOR_PALETTE_PICKER_HINT_EDIT"
texture_normal = ExtResource("3")
script = ExtResource("7")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="DuplicatePaletteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons" unique_id=1642513030]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "COLOR_PALETTE_PICKER_HINT_DUPLICATE"
texture_normal = ExtResource("5")
script = ExtResource("7")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Buttons" unique_id=1980106691]
layout_mode = 2
theme_override_styles/separator = SubResource("1")

[node name="DeletePaletteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons" unique_id=1993404397]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "COLOR_PALETTE_PICKER_HINT_DELETE"
texture_normal = ExtResource("6")
script = ExtResource("7")
hover_tint = Color(1, 0.431373, 0.431373, 1)
pressed_tint = Color(1, 0.266667, 0.266667, 1)

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1039966176]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("2")

[node name="ColorGrid" type="GridContainer" parent="MarginContainer/VBoxContainer" unique_id=958481778]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 10

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Buttons/PaletteSelectionButton" to="." method="_on_palette_selection_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/AddPaletteButton" to="." method="_on_add_palette_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/EditColorButton" to="." method="_on_edit_color_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/DuplicatePaletteButton" to="." method="_on_duplicate_palette_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/DeletePaletteButton" to="." method="_on_delete_palette_button_pressed"]
